Feat: Sets fixed role for user